<resources>
    <string name="app_name">color predictio</string>
    <string name="available_balance_50420_00">Available balance : ₹ 50420.00</string>
    <string name="recharge">Recharge</string>
    <string name="trend">Trend</string>
    <string name="parity">Parity</string>
    <string name="period">Period</string>
    <string name="count_down">Count Down</string>
    <string name="_8699220029">8699220029</string>
    <string name="_0_2_4_4">0 2 : 4 4</string>
    <string name="join_green">Join Green</string>
    <string name="join_violet">Join Violet</string>
    <string name="join_red">Join Red</string>
    <string name="_0">0</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="parity_record">Parity Record</string>
    <string name="period1">Period</string>
    <string name="price">Price</string>
    <string name="number">number</string>
    <string name="result">Result</string>
    <string name="_8699220028">8699220028</string>
    <string name="_46778">46778</string>
    <string name="m">8</string>
    <string name="_8699220026">8699220026</string>
    <string name="results">Results</string>
    <string name="period11">Period</string>
    <string name="price1">Price</string>
    <string name="number1">Number</string>
    <string name="my">My</string>
    <string name="_48784">48784</string>
    <string name="_41">4</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="win">Win</string>
    <string name="_8699220027">8699220027</string>
    <string name="_46907">46907</string>
    <string name="_7a">7</string>
    <string name="_46905">46905</string>
    <string name="create_new_account">Create New Account</string>
    <string name="enter_mobile_number">Enter Mobile Number</string>
    <string name="email_address">Email Address</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="enter_your_email_address">Enter Your Email Address</string>
    <string name="password">Password</string>
    <string name="enter_password">Enter Password</string>
    <string name="already_have_an_account">Already Have an Account?</string>
    <string name="create_account">Create Account</string>
    <string name="login">Login</string>
    <string name="_1juk">1</string>
    <string name="login_with">Login With</string>
    <string name="log_in">Log In</string>
    <string name="records">Records</string>
    <string name="recharge1">Recharge</string>
    <string name="help">Help</string>
    <string name="balance">Balance</string>
    <string name="_50420_00">₹ 50420.00</string>
    <string name="amount">Amount</string>
    <string name="_500_100000">500 - 100000</string>
    <string name="recharge11">Recharge</string>
    <string name="_48000">₹48000</string>
    <string name="_24000">₹24000</string>
    <string name="_11000">₹11000</string>
    <string name="_2500">₹2500</string>
    <string name="_1000">₹1000</string>
    <string name="_550">₹550</string>
    <string name="recharge111">Recharge</string>
    <string name="remember_me">Remember me</string>
    <string name="name">Mahinder Bishnoi</string>
    <string name="mob">Mob:</string>
    <string name="_9877734929">9877734929</string>
    <string name="id">, ID:</string>
    <string name="_2900029">2900029</string>
    <string name="change_nick_name">Change Nick Name</string>
    <string name="change_password">Change Password</string>
    <string name="task_reward">Task reward</string>
    <string name="check_in">Check in</string>
    <string name="sign_out">Sign Out</string>
    <string name="order_record">Order Record</string>
    <string name="financial_details">Financial Details</string>
    <string name="download">Download</string>
    <string name="follow_us">Follow Us</string>
    <string name="support">Support</string>
    <string name="complaint">Complaint</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>