<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Recharge">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="#099183"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:text="@string/records"
            android:textColor="#ffffff"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="60sp"
            android:layout_marginEnd="50dp"
            android:layout_weight="1"
            android:text="@string/recharge1"
            android:textColor="#ffff"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:gravity="end"
            android:text="@string/help"
            android:textColor="#fff"
            android:textSize="20sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView19"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:alpha="0.7"
        android:text="@string/balance"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

    <TextView
        android:id="@+id/textView20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/_50420_00"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/textView19"
        app:layout_constraintHorizontal_bias="0.519"
        app:layout_constraintStart_toStartOf="@+id/textView19"
        app:layout_constraintTop_toBottomOf="@+id/textView19" />

    <TextView
        android:id="@+id/textView21"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:layout_marginStart="20dp"
        android:text="@string/amount"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.048"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView20" />

    <EditText
        android:id="@+id/editText4"
        android:layout_width="350dp"
        android:layout_height="60dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="10dp"
        android:hint="@string/_500_100000"
        android:paddingStart="60dp"
        android:paddingEnd="10dp"
        android:textSize="35sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.142"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView21" />

    <ImageView
        android:layout_width="40dp"
        android:layout_height="42dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="8dp"
        android:src="@drawable/rupee_24"
        app:layout_constraintStart_toStartOf="@+id/editText4"
        app:layout_constraintTop_toTopOf="@+id/editText4" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/appCompatButton15"
        android:layout_width="110dp"
        android:layout_height="55dp"
        android:layout_marginStart="23dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/button"
        android:text="@string/_550"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText4" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/appCompatButton16"
        android:layout_width="110dp"
        android:layout_height="55dp"
        android:layout_marginStart="17dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/button"
        android:text="@string/_1000"
        android:textSize="25sp"
        app:layout_constraintStart_toEndOf="@+id/appCompatButton15"
        app:layout_constraintTop_toBottomOf="@+id/editText4" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/appCompatButton17"
        android:layout_width="110dp"
        android:layout_height="55dp"
        android:layout_marginStart="17dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="23dp"
        android:background="@drawable/button"
        android:text="@string/_2500"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/appCompatButton16"
        app:layout_constraintTop_toBottomOf="@+id/editText4" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/appCompatButton18"
        android:layout_width="110dp"
        android:layout_height="55dp"
        android:layout_marginStart="23dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/button"
        android:text="@string/_11000"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appCompatButton15" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/appCompatButton19"
        android:layout_width="110dp"
        android:layout_height="55dp"
        android:layout_marginStart="17dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/button"
        android:text="@string/_24000"
        android:textSize="25sp"
        app:layout_constraintStart_toEndOf="@+id/appCompatButton18"
        app:layout_constraintTop_toBottomOf="@+id/appCompatButton16" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/appCompatButton20"
        android:layout_width="110dp"
        android:layout_height="55dp"
        android:layout_marginStart="17dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="23dp"
        android:background="@drawable/button"
        android:text="@string/_48000"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/appCompatButton19"
        app:layout_constraintTop_toBottomOf="@+id/appCompatButton17" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/appCompatButton21"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="92dp"
        android:background="@drawable/rechargebutton"
        android:text="@string/recharge11"
        android:textColor="#ffff"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.54"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appCompatButton19" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="152dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appCompatButton21">

        <ImageView
            android:id="@+id/imageView7"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="30dp"
            android:alpha="0.5"
            android:background="@drawable/home_24"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="23dp"
            android:layout_marginTop="2dp"
            android:alpha="0.5"
            android:text="@string/home"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView7" />

        <ImageView
            android:id="@+id/imageView8"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="70dp"
            android:alpha="0.5"
            android:background="@drawable/search_50"
            app:layout_constraintStart_toEndOf="@+id/imageView7"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="53dp"
            android:layout_marginTop="2dp"
            android:alpha="0.5"
            android:text="@string/search"
            android:textSize="20sp"
            app:layout_constraintStart_toEndOf="@+id/textView8"
            app:layout_constraintTop_toBottomOf="@+id/imageView8" />

        <ImageView
            android:id="@+id/imageView9"
            android:layout_width="40dp"
            android:layout_height="40dp"

            android:layout_marginStart="70dp"
            android:background="@drawable/baseline_account_balance_wallet_24"
            app:layout_constraintStart_toEndOf="@+id/imageView8"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="34dp"
            android:layout_marginTop="2dp"

            android:paddingStart="4dp"
            android:paddingEnd="4dp"
            android:text="@string/recharge111"
            android:textSize="20sp"
            app:layout_constraintStart_toEndOf="@+id/textView9"
            app:layout_constraintTop_toBottomOf="@+id/imageView9" />

        <ImageView
            android:id="@+id/imageView10"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="70dp"
            android:alpha="0.5"
            android:background="@drawable/profile24"
            app:layout_constraintStart_toEndOf="@+id/imageView9"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tect56"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="2dp"
            android:alpha="0.5"
            android:text="@string/my"
            android:textSize="20sp"
            app:layout_constraintStart_toEndOf="@+id/textView10"
            app:layout_constraintTop_toBottomOf="@+id/imageView10" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>